// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
<div
  class="betweenBottomMargin-2 betweenBottom"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      data-no-global-styles="true"
      for="the-select"
    >
      <div
        class="betweenRightMargin-2 betweenRight alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The select
        </span>
      </div>
    </label>
  </div>
  <div
    class="relative"
  >
    <select
      aria-invalid="false"
      class="default select height"
      data-no-global-styles="true"
      id="the-select"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="feedbackIconPosition"
    />
    <div
      class="fixLineHeight caretPosition"
    >
      <i
        aria-hidden="true"
        class="iconCaretDown primary size16"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
<div
  class="betweenBottomMargin-2 betweenBottom"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      data-no-global-styles="true"
      for="the-select"
    >
      <div
        class="betweenRightMargin-2 betweenRight alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The select
        </span>
      </div>
    </label>
  </div>
  <div
    class="relative"
  >
    <select
      aria-invalid="true"
      class="error select height"
      data-no-global-styles="true"
      id="the-select"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="feedbackIconPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="iconExclamationPointCircle error size16"
          />
        </div>
      </div>
    </div>
    <div
      class="fixLineHeight caretPosition"
    >
      <i
        aria-hidden="true"
        class="iconCaretDown primary size16"
      />
    </div>
  </div>
</div>
`;
